# Smart_Inbox_Final

./: Dockerfile  README.md  app.py  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
env/: environment.py  tasks.py
server/: app.py
