[project]
name = "smart-inbox-openenv"
version = "0.1.0"
description = "Smart Inbox OpenEnv environment"
authors = [
{ name = "Hiral Dharamshi", email = "[hiral@example.com](mailto:hiral@example.com)" },
{ name = "Akshay Ravikumar", email = "[akshay@example.com](mailto:akshay@example.com)" }
]

dependencies = [
"fastapi",
"uvicorn",
"pydantic",
"openai>=1.0.0",
"openenv-core>=0.2.0"
]


[project.scripts]
server = "server.app:main"


[tool.openenv]
entry_point = "env.environment:SmartInboxEnv"
